Shamash Developments Tech Tree 0.2
Fixed some spelling errors in the tech tree node descriptions, added upgrade modules for the comms antenna, fixed the Wheesley not having its upgrade modules applied, added optional configs that add SRB gimbals

--- a/SDTechTree/SDTechTree_Part-Upgrades-Implementation.cfg
+++ b/SDTechTree/SDTechTree_Part-Upgrades-Implementation.cfg
@@ -430,9 +430,16 @@
 			UPGRADE
 			{
 				name__ = SD-Liquid4
-				description__ = Thrust now 192 kN
+				description__ = Thrust now 192 kN, ISP 297.375/258.375 seconds
 				maxThrust = 192
 				//80% stock
+				atmosphereCurve
+				{
+					key = 0 297.375
+					key = 1 258.375
+					key = 9 0.001
+				}
+				//vac 97.5%, ASL 97.5%
 			}
 			UPGRADE
 			{
@@ -504,6 +511,7 @@
 				name__ = SD-Liquid3
 				description__ = Thrust now 210 kN, ISP 279/238.5 seconds
 				maxThrust = 210
+				//87.5% stock
 				atmosphereCurve
 				{
 					key = 0 279
@@ -517,6 +525,7 @@
 				name__ = SD-Liquid4
 				description__ = Thrust now 225.6 kN, ISP 294.5/251.75 seconds
 				maxThrust = 225.6
+				//94% stock
 				atmosphereCurve
 				{
 					key = 0 294.5
@@ -530,6 +539,7 @@
 				name__ = SD-Liquid5
 				description__ = Thrust now 240 kN, ISP 310/265 seconds
 				maxThrust = 240
+				//100% stock
 				atmosphereCurve
 				{
 					key = 0 310
@@ -609,12 +619,14 @@
 				name__ = SD-Liquid5
 				description__ = Thrust now 215 kN, ISP 320/250 seconds
 				maxThrust = 215
+				//100% stock
 				atmosphereCurve
 				{
 					key = 0 320
 					key = 1 250
 					key = 6 0.001
 				}
+				//vac 100%, ASL 100%
 			}
 		}
 	}
@@ -707,6 +719,7 @@
 					key = 1 275
 					key = 9 0.001
 				}
+				//vac 100%, ASL 100%
 			}
 		}
 				
@@ -762,6 +775,7 @@
 				name__ = SD-Liquid3
 				description__ = Thrust now 30 kN, ISP 304/256.5 seconds
 				maxThrust = 30
+				//75% stock
 				atmosphereCurve
 				{
 					key = 0 304
@@ -1293,7 +1307,7 @@
 
 
 //RE-I5 nerfs and upgrades
-@PART[LiquidEngineLV-TX87]
+@PART[engineLargeSkipper]
 {
 	@MODULE[ModuleEngines]
 	{
@@ -2088,7 +2102,7 @@
 		//}
 		//90% stock
 		
-		UPPGRADES
+		UPGRADES
 		{
 			UPGRADE
 			{
@@ -2719,6 +2733,144 @@
 	}
 }
 
+
+//comms upgrades
+//-------------------------------------------------------------------------------------------------------\\
+//SurfAntenna, longAntenna, mediumDishAntenna, HighGainAntenna, commDish
+//HighGainAntenna5, RelayAntenna5, RelayAntenna50, RelayAntenna100
+@PART[SurfAntenna|longAntenna]
+{
+	@MODULE[ModuleDataTransmitter]
+	{
+		@packetInterval = 0.9
+		//150% stock
+		@packetResourceCost = 18
+		//150% stock
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Comms1
+				description__ = packet interval now 0.6 packets/second, size now 2 mits/packet, cost now 12 EC/packet
+				packetInterval = 0.6
+				packetResourceCost = 12
+			}
+		}
+	}
+}
+
+@PART[mediumDishAntenna]
+{
+	@MODULE[ModuleDataTransmitter]
+	{
+		@packetInterval = 0.525
+		//150% stock
+		@packetResourceCost = 18
+		//150% stock
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Comms1
+				description__ = packet interval now 0.35 packets/second, size now 2 mits/packet, cost now 12 EC/packet
+				packetInterval = 0.35
+				packetResourceCost = 12
+			}
+		}
+	}
+}
+
+@PART[HighGainAntenna]
+{
+	@MODULE[ModuleDataTransmitter]
+	{
+		@packetInterval = 0.225
+		//150% stock
+		@packetResourceCost = 30
+		//150% stock
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Comms1
+				description__ = packet interval now 0.15 packets/second, size now 3 mits/packet, cost now 20 EC/packet
+				packetInterval = 0.15
+				packetResourceCost = 20
+			}
+		}
+	}
+}
+
+@PART[commDish]
+{
+	@MODULE[ModuleDataTransmitter]
+	{
+		@packetInterval = 0.15
+		//150% stock
+		@packetResourceCost = 30
+		//150% stock
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Comms1
+				description__ = packet interval now 0.1 packets/second, size now 2 mits/packet, cost now 20 EC/packet
+				packetInterval = 0.1
+				packetResourceCost = 20
+			}
+		}
+	}
+}
+
+@PART[HighGainAntenna5]
+{
+	@MODULE[ModuleDataTransmitter]
+	{
+		@packetInterval = 0.525
+		//150% stock
+		@packetResourceCost = 27
+		//150% stock
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Comms1
+				description__ = packet interval now 0.525 packets/second, cost now 18 EC/packet
+				packetInterval = 0.35
+				packetResourceCost = 18
+			}
+		}
+	}
+}
+
+@PART[RelayAntenna5|RelayAntenna50|RelayAntenna100]
+{
+	@MODULE[ModuleDataTransmitter]
+	{
+		@packetInterval = 0.525
+		//150% stock
+		@packetResourceCost = 36
+		//150% stock
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Comms1
+				description__ = packet interval now 0.35 packets/second, cost now 24 EC/packet
+				packetInterval = 0.35
+				packetResourceCost = 24
+			}
+		}
+	}
+}
+
+
 //misc
 //-------------------------------------------------------------------------------------------------------\\
 //@PART[*]:HAS[@RESOURCE[MonoPropellant],@MODULE[ModuleCommand]]
@@ -2751,4 +2903,3 @@
 //	manufacturer = Research & Development
 //	description = We've installed monopropellant tanks in some of our command pods to fuel our new Reaction Control Thrusters.
 //}
-//seems upgrades only work on modules, resources must not count
