--- a/SDTechTree/SDTechTree_Structure.cfg
+++ b/SDTechTree/SDTechTree_Structure.cfg
@@ -44,7 +44,7 @@
 	{
 		@id = introAviation
 		@title = Introductory Aviation
-		@description = Should your prefrences align more with flying rather than falling, we've devised some parts that you may find interesting.
+		@description = Should your preferences align more with flying rather than falling, we've devised some parts that you may find interesting.
 		@cost = 10
 		@hideEmpty = False
 		@nodeName = node1_introAviation
@@ -124,7 +124,7 @@
 	{
 		@id = fuel
 		@title = Fuel Containers
-		@description = Building tanks that hold more highly caustic, reactive, and explosive rocket porpellant to work in vibrating, zero-g, or other enviornments we as of yet know little about isn't as easy as it may sound, but none-the-less, its what we've been putting our minds to.
+		@description = Building tanks that hold more highly caustic, reactive, and explosive rocket propellant to work in vibrating, zero-g, or other environments we as of yet know little about isn't as easy as it may sound, but none-the-less, it's what we've been putting our minds to.
 		@cost = 30
 		@hideEmpty = False
 		@nodeName = node2_fuel
@@ -144,7 +144,7 @@
 	{
 		@id = wingDesign
 		@title = Wing Design
-		@description = More wings to keep your your aircraft in the air and not in the ground.
+		@description = More wings to keep your aircraft in the air and not in the ground.
 		@cost = 30
 		@hideEmpty = False
 		@nodeName = node2_wingDesign
@@ -244,7 +244,7 @@
 	{
 		@id = scientificSystems
 		@title = Scientific Systems
-		@description = It recently occured to one of the members of our science team that the data we collect might not be very useful if it doesn't manage to return in a form that can be recovered. To that end, he and the engineering team have devised some components to ensure the science we collect can make it home safely.
+		@description = It recently occurred to one of the members of our science team that the data we collect might not be very useful if it doesn't manage to return in a form that can be recovered. To that end, he and the engineering team have devised some components to ensure the science we collect can make it home safely.
 		@cost = 30
 		@hideEmpty = False
 		@nodeName = node2_scientificSystems
@@ -264,7 +264,7 @@
 	{
 		@id = pumpEfficiency
 		@title = Pump Efficiency
-		@description = One of our engineering was tinkering with the coolant pump on one of the R&D computers when it occured to him that some of the "special modifications" he made to that sysem may also be applicable to the turbopumps inside our liquid fueled engines.
+		@description = One of our engineering was tinkering with the coolant pump on one of the R&D computers when it occurred to him that some of the "special modifications" he made to that system may also be applicable to the turbopumps inside our liquid fueled engines.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_pumpEfficiency
@@ -304,7 +304,7 @@
 	{
 		@id = bigFuel
 		@title = Big Fuel Containers
-		@description = Larger tanks for larger rockets. We are mostly confident that the fuel shouldn't slosh in these ones, but just to be sure, its probably best to assume a minimum safe distance before launch.
+		@description = Larger tanks for larger rockets. We are mostly confident that the fuel shouldn't slosh in these ones, but just to be sure, it's probably best to assume a minimum safe distance before launch.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_bigFuel
@@ -350,7 +350,7 @@
 	{
 		@id = advWingDesign
 		@title = Advanced Wing Design
-		@description = The engineering and science team has been putting a great deal of though into the effects of flying an aircraft faster than the speed of sound. Together, they've listed and built some shapes they think would be interesting to see fly at those speeds.
+		@description = The engineering and science team has been putting a great deal of thought into the effects of flying an aircraft faster than the speed of sound. Together, they've listed and built some shapes they think would be interesting to see fly at those speeds.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_advWingDesign
@@ -370,7 +370,7 @@
 	{
 		@id = improvedIntakes
 		@title = Improved Intakes
-		@description = With engines who's performance is predicated by air, its only natural to wonder how we might get them even more air. To that end, we've been studying exactly how our jet engines work and devised some tweaks that may make them work better as well as some air intakes you may find interesting.
+		@description = With engines who's performance is predicated by air, it's only natural to wonder how we might get them even more air. To that end, we've been studying exactly how our jet engines work and devised some tweaks that may make them work better as well as some air intakes you may find interesting.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_improvedIntakes
@@ -410,7 +410,7 @@
 	{
 		@id = structures
 		@title = Structures
-		@description = By manufacturing the plates at a larger size, we've managed to shave some mass, compared to what they might weigh if we were to just spot weld two together. We've also been working on some nose cones. While not as versitile as the procedural payload envelopes the rocketry department has been working on, they are cheaper and lighter.
+		@description = By manufacturing the plates at a larger size, we've managed to shave some mass, compared to what they might weigh if we were to just spot weld two together. We've also been working on some nose cones. While not as versatile as the procedural payload envelopes the rocketry department has been working on, they are cheaper and lighter.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_structures
@@ -430,7 +430,7 @@
 	{
 		@id = electricalSystems
 		@title = Electrical Systems
-		@description = Engineering modular, multipurpose electrical systems to fit on board a space craft is not as easy as it sounds, but we think we have a few designs that might interest you and are mostly garunteed not to short out on lift-off.
+		@description = Engineering modular, multipurpose electrical systems to fit on board a space craft is not as easy as it sounds, but we think we have a few designs that might interest you and are mostly guaranteed not to short out on lift-off.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_electricalSystems
@@ -476,7 +476,7 @@
 	{
 		@id = scienceSystems
 		@title = Science Systems
-		@description = Through some computer wizardry, one of our interns managed to find a way to make our vessels in flight able to efficiently relay signals. This could be the start a major breakthrough in telecomunications ushering in a new era of world connectivity. Oh, and we've also shoved some weird, probably expired jam said intern found in the back of the break room frige into a container for you to send to space. We're rather excited to see what happens to it.
+		@description = Through some computer wizardry, one of our interns managed to find a way to make our vessels in flight able to efficiently relay signals. This could be the start a major breakthrough in telecommunications ushering in a new era of world connectivity. Oh, and we've also shoved some weird, probably expired jam said intern found in the back of the break room frige into a container for you to send to space. We're rather excited to see what happens to it.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_scienceSystems
@@ -516,7 +516,7 @@
 	{
 		@id = largerLift
 		@title = Larger Lifting Engines
-		@description = Combusion stability issues aside, these engines should be exactly what you need for your more ambitious lifters.
+		@description = Combustion stability issues aside, these engines should be exactly what you need for your more ambitious lifters.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_largerLift
@@ -536,7 +536,7 @@
 	{
 		@id = vacuum
 		@title = Vacuum Engines
-		@description = An assortment of engines that have been optimized to opperate in or near vacuum conditions. They might not be the most powerful, but they'll get you where you need to go for less fuel. Thier also deeply throttlable and ignite easily and reliably, making for great landing engines.
+		@description = An assortment of engines that have been optimized to operate in or near vacuum conditions. They might not be the most powerful, but they'll get you where you need to go for less fuel. They're also deeply throttlable and ignite easily and reliably, making for great landing engines.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_vacuum
@@ -576,7 +576,7 @@
 	{
 		@id = monoprop
 		@title = Monopropellant Containment
-		@description = This stuff is caustic, toxic, carsinogenic, and likes to explode if you so much as look at if funny. Great if you want it to go off in a rocket engine on command and without complex or limited use ignitor systems. Not so great if you want to actually find a way to store large quantities of it. Which is exactly what we've been trying to do. Took some time, and we nearly burned the new R&D building down twice, but we think these new containers ought to do the trick.
+		@description = This stuff is caustic, toxic, carcinogenic, and likes to explode if you so much as look at if funny. Great if you want it to go off in a rocket engine on command and without complex or limited use ignitor systems. Not so great if you want to actually find a way to store large quantities of it. Which is exactly what we've been trying to do. Took some time, and we nearly burned the new R&D building down twice, but we think these new containers ought to do the trick.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_monoprop
@@ -682,7 +682,7 @@
 	{
 		@id = largeStructures
 		@title = Large Structures
-		@description = We applied the same logic and process as before, but on a bigger scale... more or less. There were some problems with the metalurgy not wanting to support a single sheet this size, but we fixed that... at least, we're pretty sure we fixed that.
+		@description = We applied the same logic and process as before, but on a bigger scale... more or less. There were some problems with the metallurgy not wanting to support a single sheet this size, but we fixed that... at least, we're pretty sure we fixed that.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_largeStructures
@@ -722,7 +722,7 @@
 	{
 		@id = advSpaceFlight
 		@title = Advanced Space Flight
-		@description = If we plan to advance in much in the field of space exploration, we'll need a better understanding of the effects of spaceflight on the Kerbal body, and how we can opperate and fly in space. To that end, we've constructed some larger capsules, so you can put more people up at once, without resorting to those absurd looking, spot welded together abominations we've seen you tinkering with in the VAB.
+		@description = If we plan to advance in much in the field of space exploration, we'll need a better understanding of the effects of spaceflight on the Kerbal body, and how we can operate and fly in space. To that end, we've constructed some larger capsules, so you can put more people up at once, without resorting to those absurd looking, spot welded together abominations we've seen you tinkering with in the VAB.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_advSpaceFlight
@@ -742,7 +742,7 @@
 	{
 		@id = betterGuidance
 		@title = Better Guidance
-		@description = More sophisticated guidance computers, now with a sophisticated intertial guidance system for simple vector tracking. Its also come to our attention that the accelerometers used in the inertial guidance could make great scientific instruments if we enhance their resolution a little.
+		@description = More sophisticated guidance computers, now with a sophisticated inertial guidance system for simple vector tracking. Its also come to our attention that the accelerometers used in the inertial guidance could make great scientific instruments if we enhance their resolution a little.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_betterGuidance
@@ -762,7 +762,7 @@
 	{
 		@id = improvedComms
 		@title = Improved Science Systems
-		@description = Some studies done by a few of our scientists suggest a way we could push more data through our comms antenna without changing thier form-factor or power consumption.
+		@description = Some studies done by a few of our scientists suggest a way we could push more data through our comms antenna without changing their form-factor or power consumption.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_improvedComms
@@ -782,7 +782,7 @@
 	{
 		@id = panel1
 		@title = Solar Panel Efficiency
-		@description = We've found a way to squeeze more wattage per cell out of our solar panels. You should notice a marked improvement in power output on subsiquent models, now.
+		@description = We've found a way to squeeze more wattage per cell out of our solar panels. You should notice a marked improvement in power output on subsequent models, now.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_pane1
@@ -822,7 +822,7 @@
 	{
 		@id = massiveLift
 		@title = Massive Lifting Engines
-		@description = A breakthrough in the nature of combusion stability has allowed us to build engines with absolutely massive combusion chambers.
+		@description = A breakthrough in the nature of combustion stability has allowed us to build engines with absolutely massive combustion chambers.
 		@cost = 330
 		@hideEmpty = False
 		@nodeName = node5_massiveLift
@@ -928,7 +928,7 @@
 	{
 		@id = advAeroDesign
 		@title = Advanced Aero Design
-		@description = We've devised some additional parts that should compliment our existing mk 2 fuselages.
+		@description = We've devised some additional parts that should complement our existing mk 2 fuselages.
 		@cost = 330
 		@hideEmpty = False
 		@nodeName = node5_advAeroDesign
@@ -948,7 +948,7 @@
 	{
 		@id = heavyFuselage
 		@title = Heavy Fuselage Design
-		@description = While they might not look all too remarkable at a first pass, in most respect other than their obscene size, we've designed these colosal aircraft parts to take an absolute beating.
+		@description = While they might not look all too remarkable at a first pass, in most respect other than their obscene size, we've designed these colossal aircraft parts to take an absolute beating.
 		@cost = 330
 		@hideEmpty = False
 		@nodeName = node5_heavyFuselage
@@ -968,7 +968,7 @@
 	{
 		@id = largerStructures
 		@title = Larger Structures
-		@description = Some of the R&D team have been working on some more advanced metalurgy that have allowed us to build even larger and more complicated structural components.
+		@description = Some of the R&D team have been working on some more advanced metallurgy that have allowed us to build even larger and more complicated structural components.
 		@cost = 330
 		@hideEmpty = False
 		@nodeName = node5_largerStructures
@@ -1094,7 +1094,7 @@
 	{
 		@id = engineUpgrade5
 		@title = Improved Combusion Stability Models
-		@description = Using some of the new, more powerful computers in the R&D center, we've been able to improve our combusion stability models and fine tune the design of our injector plates for our larger engines. You should notice a slight increase in their thrust and efficiency now.
+		@description = Using some of the new, more powerful computers in the R&D center, we've been able to improve our combustion stability models and fine tune the design of our injector plates for our larger engines. You should notice a slight increase in their thrust and efficiency now.
 		@cost = 450
 		@hideEmpty = False
 		@nodeName = node6_engineUpgrade5
@@ -1114,7 +1114,7 @@
 	{
 		@id = colossalLifter
 		@title = Colossal Lifter Engines
-		@description = Colossal propulsion systems to drive your undoubtably colossal lifters, without having to resort to using too many engines.
+		@description = Colossal propulsion systems to drive your undoubtedly colossal lifters, without having to resort to using too many engines.
 		@cost = 450
 		@hideEmpty = False
 		@nodeName = node6_colossalLifter
@@ -1134,7 +1134,7 @@
 	{
 		@id = massiveVacuum
 		@title = Massive Vacuum Engines
-		@description = Larger vucuum engines to power your ever more ambitious upper stages and landers.
+		@description = Larger vacuum engines to power your ever more ambitious upper stages and landers.
 		@cost = 450
 		@hideEmpty = False
 		@nodeName = node6_massiveVacuum
@@ -1200,7 +1200,7 @@
 	{
 		@id = supersonicPropulsion
 		@title = Supersonic Propulsion
-		@description = A breakthrough in supersonic propulsion systems has enabled us to push engine design even further and achieve even more phenomninal speeds.
+		@description = A breakthrough in supersonic propulsion systems has enabled us to push engine design even further and achieve even more phenomenal speeds.
 		@cost = 450
 		@hideEmpty = False
 		@nodeName = node6_supersonicPropulsion
@@ -1240,7 +1240,7 @@
 	{
 		@id = hugeStructures
 		@title = Huge Structures
-		@description = We've pushed the bounds of metalurgy with this one, producing massive monolithic plates of metal with remarkable strength and rigidity.
+		@description = We've pushed the bounds of metallurgy with this one, producing massive monolithic plates of metal with remarkable strength and rigidity.
 		@cost = 450
 		@hideEmpty = False
 		@nodeName = node6_hugeStructures
@@ -1439,7 +1439,7 @@
 	{
 		id = sophisticatedRockets
 		title = Sophisticated Rocket Systems
-		description = While not as big or powerful as some of our prior designs, these engines are of unparelleled complexity and efficiency in a remarkably small form factor.
+		description = While not as big or powerful as some of our prior designs, these engines are of unparalleled complexity and efficiency in a remarkably small form factor.
 		cost = 750
 		hideEmpty = False
 		nodeName = node7_sophisticatedRockets
@@ -1496,7 +1496,7 @@
 	{
 		id = specializedIntakes
 		title = Specialized Intakes
-		description = Further study of supersonic flight has allowed the design of some unique intakes, specialized to opperate at those conditions
+		description = Further study of supersonic flight has allowed the design of some unique intakes, specialized to operate at those conditions
 		cost = 750
 		hideEmpty = False
 		nodeName = node7_specializedIntakes
@@ -1515,7 +1515,7 @@
 	{
 		id = colossalStructures
 		title = Colossal Structures
-		description = Absolutely gargantuan pieces of metal made not just possible but remarkably stable by recent advancements in metalurgy and fabrication technology.
+		description = Absolutely gargantuan pieces of metal made not just possible but remarkably stable by recent advancements in metallurgy and fabrication technology.
 		cost = 750
 		hideEmpty = False
 		nodeName = node7_colossalStructures
@@ -1610,7 +1610,7 @@
 	{
 		id = spaceFacilities
 		title = Space Facilities
-		description = These new facilities will give our Kerbals something productive to do during thier stay in space.
+		description = These new facilities will give our Kerbals something productive to do during their stay in space.
 		cost = 750
 		hideEmpty = False
 		nodeName = node7_spaceFacilities
