--- a/SDTechTree/SDTechTree_UpgradeDefinitions.cfg
+++ b/SDTechTree/SDTechTree_UpgradeDefinitions.cfg
@@ -291,15 +291,15 @@ PARTUPGRADE
 
 //comms antenna upgrades
 //-------------------------------------------------------------------------------------------------------\\
-//PARTUPGRADE
-//{
-//	name = SD-Comms1
-//	partIcon = 
-//	techRequired = 
-//	entryCost = 
-//	cost = 0
-//	title = 
-//	basicInfo = 
-//	manufacturer = Research & Development Department
-//	description = 
-//}
+PARTUPGRADE
+{
+	name = SD-Comms1
+	partIcon = mediumDishAntenna
+	techRequired = improvedComms
+	entryCost = 75000
+	cost = 0
+	title = Improved Data Compression
+	basicInfo = Our antenna should be more effective now.
+	manufacturer = Research & Development Department
+	description = Improvements to our data compression algorithms with our communication systems has allowed us to push more data through a transmission.
+}
