--- a/SDTechTree/SDTechTree_Part-Optional-Upgrades.cfg
+++ b/SDTechTree/SDTechTree_Part-Optional-Upgrades.cfg
@@ -35,11 +35,13 @@ PARTUPGRADE
 	entryCost = 7500
 	cost = 0
 	title = SRB Gimbals
-	basicInfo = Our larger SRBs can now thrust vector.
+	basicInfo = Our larger SRBs can now thrust vector. *Optional Tech*
 	manufacturer = Research & Development Department
 	description = Thrust vectoring on a liquid rocket motor can be accomplished by actuating the thrust chamber, a technique that can't nessecarily be directly duplicated in a solid rocket motor, since the thrust chamber effectively stretches up the whole of the booster. None-the-less, we think we've managed to find some techniques that will produce analogous behavior with our larger solid rockets.
 }
 
 //LV-N passive power and heat generation
 
-//
+//rocket engine spool speeds
+
+//rocket minimum thrust
