--- a/SDTechTree/SDTechTree_Part-Upgrades-Implementation.cfg
+++ b/SDTechTree/SDTechTree_Part-Upgrades-Implementation.cfg
@@ -4,6 +4,43 @@
 //:FOR[ShamashDevelopments]
 
 //solid motor upgrade stats
+//seperatron nerf and upgrades
+@PART[sepMotor1]
+{
+	@MODULE[ModuleEngines]
+	{
+		@maxThrust = 6
+		//thrust 33.3% stock
+		
+		//!atmosphereCurve,* {}
+		//atmosphereCurve
+		//{
+		//	key = 0 154
+		//	key = 1 118
+		//	key = 6 0.001
+		//}
+		//vac ISP 100%, ASL ISP 100%
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Solids-thrust1
+				description__ = Thrust now 12 kN
+				maxThrust = 12
+				//thrust 66.6%
+			}
+			UPGRADE
+			{
+				name__ = SD-Solids-thrust2
+				description__ = Thrust now 18 kN
+				maxThrust = 18
+				//thrust 100%
+			}
+		}
+	}
+}
+
 //Flea booster nerf and upgrades
 @PART[solidBooster_sm]
 {
@@ -243,7 +280,7 @@
 	}
 }
 
-//LV-R1 nerfs and upgrades
+//LV-1R nerfs and upgrades
 @PART[radialEngineMini]:FOR[ShamashDevelopments]
 {
 	@MODULE[ModuleEnginesFX]
@@ -286,31 +323,12 @@
 				{
 					key = 0 290
 					key = 1 260
-					key 8 = 0.001
+					key = 8 0.001
 				}
 				//vac ISP 100%, ASL ISP 100%
 			}
 		}
 	}
-		
-//	@MODULE[ModuleGimbal]
-//	{
-//		@gimbalRange = 0
-//		moduleIsEnabled = false
-//		hideUIwhenUnavailable = true
-//		
-//		UPGRADES
-//		{
-//			UPGRADE
-//			{
-//				name__ = SD-Liquid-gimbals1
-//				description__ = now +- 10 degrees
-//				gimbalRange = 10
-//				moduleIsEnabled = true
-//				hideUIwhenUnavailable = false
-//			}
-//		}
-//	}
 }
 
 
@@ -889,10 +907,27 @@
 	}
 }
 
-
 //LR-87 nerfs and upgrades
 @PART[LiquidEngineLV-TX87]
 {
+	//second gimbal upgrade fix
+	@MODULE[ModuleGimbal],1
+	{
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals1
+				description__ = engine can now gimbal
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = flase
+			}
+		}
+	}
+	//engine performance fix
 	@MODULE[ModuleEngines]
 	{
 		@maxThrust = 320
@@ -2035,7 +2070,7 @@
 					key = 1 100
 					key = 1.2 0.001
 				}
-				//vac 85%, ASL 85%
+				//vac 100%, ASL 100%
 			}
 		}
 	}
@@ -2051,11 +2086,11 @@
 		@maxThrust = 10
 		// 50% stock
 		
-		//!atmosphereCurve,* {}
-		//atmosphereCurve
-		//{
-		//	key = 0 5760 0 0
-		//}
+		!atmosphereCurve,* {}
+		atmosphereCurve
+		{
+			key = 0 5760 0 0
+		}
 		//90% stock
 		
 		UPGRADES
@@ -2063,25 +2098,25 @@
 			UPGRADE
 			{
 				name__ = SD-Jets1
-				description__ = Static thrust now 15 kN
+				description__ = Static thrust now 15 kN, ISP 6080 seconds
 				maxThrust = 15
 				//75% stock
-				//atmosphereCurve
-				//{
-				//	key = 0 6400 0 0
-				//}
-				//100% stock
+				atmosphereCurve
+				{
+					key = 0 6080 0 0
+				}
+				//95% stock
 			}
 			UPGRADE
 			{
 				name__ = SD-Jets2
-				description__ = Static thrust now 20 kN
+				description__ = Static thrust now 20 kN, ISP 6400 seconds
 				maxThrust = 20
 				//100% stock
-				//atmosphereCurve
-				//{
-				//	key = 0 6400 0 0
-				//}
+				atmosphereCurve
+				{
+					key = 0 6400 0 0
+				}
 				//100% stock
 			}
 		}
@@ -2095,11 +2130,11 @@
 		@maxThrust = 90
 		//75% stock
 		
-		//!atmosphereCurve,* {}
-		//atmosphereCurve
-		//{
-		//	key = 0 9450 0 0
-		//}
+		!atmosphereCurve,* {}
+		atmosphereCurve
+		{
+			key = 0 9450 0 0
+		}
 		//90% stock
 		
 		UPGRADES
@@ -2110,17 +2145,23 @@
 				description__ = Static thrust now 108 kN
 				maxThrust = 108
 				//90% stock
-				//atmosphereCurve
-				//{
-				//	key = 0 10500
-				//}
-				//100% stock
+				atmosphereCurve
+				{
+					key = 0 9975
+				}
+				//95% stock
 			}
 			UPGRADE
 			{
 				name__ = SD-Jets3
 				description__ = Static thrust now 120 kN
 				maxThrust = 120
+				//100% stock
+				atmosphereCurve
+				{
+					key = 0 10500
+				}
+				//100% stock
 			}
 		}
 	}
@@ -2133,11 +2174,11 @@
 		@maxThrust = 270
 		//75% stock
 		
-		//!atmosphereCurve,* {}
-		//atmosphereCurve
-		//{
-		//	key = 0 11340
-		//}
+		!atmosphereCurve,* {}
+		atmosphereCurve
+		{
+			key = 0 11340
+		}
 		//90% stock
 		
 		UPGRADES
@@ -2148,15 +2189,54 @@
 				description__ = Static thrust new 360 kN
 				maxThrust = 360
 				//100% stock
-				//atmosphereCurve
-				//{
-				//	key = 0 12600 0 0
-				//}
+				atmosphereCurve
+				{
+					key = 0 12600 0 0
+				}
 				//100% stock
 			}
 		}
 	}
 }
+//Panther
+//@PART[turboJet]
+//{
+	//Dry: 85 kN, 9000 s
+//	@MODULE[ModuleEnginesFX]
+//	{
+//	
+//	}
+	//Wet: 130 kN, 4000 s
+//	@MODULE[ModuleEnginesFX],1
+//	{
+//	
+//	}
+//}
+
+//Whiplash
+//@PART[turboFanEngine]
+//{
+	//130 kN, 4000 s
+//	@MODULE[ModuleEnginesFX]
+//	{
+//	
+//	}
+//}
+
+//RAPIER
+//@PART[RAPIER]
+//{
+	//AirBreathing: 105 kN, 3200 s
+//	@MODULE[ModuleEnginesFX]
+//	{
+//	
+//	}
+	//ClosedCycle: 180 kN, 305/275 s
+//	@MODULE[ModuleEnginesFX],1
+//	{
+//	
+//	}
+//}
 
 
 //power generator upgrade stats
@@ -2903,3 +2983,9 @@
 //	manufacturer = Research & Development
 //	description = We've installed monopropellant tanks in some of our command pods to fuel our new Reaction Control Thrusters.
 //}
+
+//mystery goo unlock cost
+@PART[GooExperiment]
+{
+	@entryCost = 2300
+}
