--- a/SDTechTree/SDTechTree_Parts.cfg
+++ b/SDTechTree/SDTechTree_Parts.cfg
@@ -1,7 +1,7 @@
 //Shamash Designs custom tech tree part assignment
 //Entry costs for tier zero are set to 0, other entry costs will need to be examined and possibly reassigned on a part-by-part basis.
 
-//@PART[*]:FIRST
+//@PART[*]:HAS[!MODULE[ModuleAsteroid]]:FIRST
 //	{
 //		@TechRequired = debug
 //	}
@@ -37,7 +37,7 @@
 //upgrade node, no parts
 
 //tier 2, lifter engines, lifterEngines
-@PART[linearRcs|LiquidEngineRK-7|liquidEngine|solidBooster1-1|liquidEngineMini]:FOR[ShamashDevelopments]
+@PART[linearRcs|LiquidEngineRK-7|liquidEngine|liquidEngineMini]:FOR[ShamashDevelopments]
 //RCS tank capacity upgrade to command modules (unfinished), SRM thrust and ISP upgrade
 	{
 		@TechRequired = lifterEngines
@@ -154,12 +154,12 @@
 		@TechRequired = scienceSystems
 	}
 
-//R&D tier 2
+//R&D building tier 2
 //tier 4, nozzle refinement, nozzleRefinement
 //upgrade node, no parts
 
 //tier 4, larger lifting engines, largerLift
-@PART[LiquidEngineLV-TX87|LiquidEngineRE-I2|MassiveBooster]:FOR[ShamashDevelopments]
+@PART[LiquidEngineLV-TX87|LiquidEngineRE-I2|solidBooster1-1]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = largerLift
 	}
@@ -244,7 +244,7 @@
 //upgrade module node, no parts
 
 //tier 5, massive lifting engines, massiveLift
-@PART[engineLargeSkipper|LiquidEngineKE-1|vernierEngine]:FOR[ShamashDevelopments]
+@PART[engineLargeSkipper|LiquidEngineKE-1|vernierEngine|MassiveBooster]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = massiveLift
 	}
@@ -417,7 +417,7 @@
 //tier 6, solar panel efficiency II, panel2
 //upgrade module node, no parts
 
-//R&D tier 3
+//R&D building tier 3
 //tier 7, sophisticated rocket systems, sophisticatedRockets
 @PART[SSME|Size3EngineCluster|toroidalAerospike]:FOR[ShamashDevelopments]
 	{
@@ -519,3 +519,29 @@
 
 //tier 8, solar panel efficiency III, panel3
 //upgrade module node, no parts
+
+//---------------------------------------------------------------------------------------------------------------------\\
+//old, hidden parts
+//-size 0 decoupler: stackDecouplerMini, basicRocketry
+//-size 0 separator: stackSeparatorMini, introEGR
+//-size 1 decoupler: stackDecoupler, basicRocketry
+//-size 1 separator: stackSeparator, simpleStructures
+//-size 2 decoupler: decoupler1-2, biggerFuel
+//-size 2 separator: stackSeparatorBig, largerStructures
+//-size 3 decoupler: size3Decoupler, massiveFuel
+//-Rockomax short: fuelTank4-2, biggerFuel
+//-Rockomax medium: fuelTank2-2, hugeFuel
+//-Rockomax long: fuelTank1-2, hugeFuel
+//-Rockomax orange: fuelTank3-2, massiveFuel
+//toroid: toroidalFuelTank, bigFuel
+//mk1-2: Mark1-2Pod, sophisticatedSpaceFlight
+@PART[stackDecouplerMini|stackDecoupler]:FOR[ShamashDevelopments]	{	@TechRequired = basicRocketry	}
+@PART[stackSeparatorMini]:FOR[ShamashDevelopments]			{	@TechRequired = introEGR	}
+@PART[stackSeparator]:FOR[ShamashDevelopments]				{	@TechRequired = simpleStructures}
+@PART[decoupler1-2|fuelTank4-2]:FOR[ShamashDevelopments]		{	@TechRequired = biggerFuel	}
+@PART[stackSeparatorBig]:FOR[ShamashDevelopments]			{	@TechRequired = largerStructures}
+@PART[size3Decoupler]:FOR[ShamashDevelopments]				{	@TechRequired = massiveFuel	}
+@PART[fuelTank2-2|fuelTank1-2]:FOR[ShamashDevelopments]			{	@TechRequired = hugeFuel	}
+@PART[fuelTank3-2]:FOR[ShamashDevelopments]				{	@TechRequired = massiveFuel	}
+@PART[toroidalFuelTank]:FOR[ShamashDevelopments]			{	@TechRequired = bigFuel		}
+@PART[Mark1-2Pod]:FOR[ShamashDevelopments]				{	@TechRequired = sophisticatedSpaceFlight}
