--- a/SDTechTree/SDTechTree_UpgradeDefinitions.cfg
+++ b/SDTechTree/SDTechTree_UpgradeDefinitions.cfg
@@ -257,7 +257,7 @@ PARTUPGRADE
 	title = Improved Thermocouples
 	basicInfo = 
 	manufacturer = Research & Development Department
-	description = Improve thermo-electric devices allow us to convert the energy released by the fissile material inside the RTG into electricity more efficiently, eeking more power out of our RTGs.
+	description = Improved thermo-electric devices allow us to convert the energy released by the fissile material inside the RTG into electricity more efficiently, eeking more power out of our RTGs.
 }
 
 
